--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
