--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
