--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
@@ -34,6 +35,7 @@
     "@types/react-dom": "^19",
     "@types/recharts": "^2.0.1",
     "bcrypt": "^5.1.1",
+    "prettier": "^3.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "typescript": "^5"
