--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@headlessui/react": "^2.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
